# LLM-Wiki-Hackaton

./: .gitignore  PRESENTATION_PROMPT.md  RUNNING.md  SUBMISSION.md  hackaton-info.txt  info.txt  pyproject.toml
components/: README.md  SlidingStackPip.tsx
llmwiki/: __init__.py  attempt.py  cli.py  config.py  critique.py  editor_tools.py  edl.py  gemini_vision.py  ingest.py  lint.py  memory.py  prompts.py  redis_use.py  self_improve.py  sources.py  wiki.py
my_skills/broll-selection/: SKILL.md
my_skills/cut-detection/: SKILL.md
my_skills/on-screen-text/: SKILL.md
my_skills/pacing/: SKILL.md
my_skills/transitions/: SKILL.md
remotion/: MAINTENANCE.md  README.md  package-lock.json  package.json  tsconfig.json
remotion/src/: Hero.tsx  Main.tsx  Root.tsx  types.ts
scripts/: cognee_ui.sh  demo.sh  smoke_cognee.py
slides/: index.html
viz/: server.py
viz/templates/: _base.html  index.html  run.html
wiki/: _lint_report.md  log.md
wiki/observations/ingest-2026-05-16T21-42-37Z/: broll.md  cuts.md  motion.md  pacing.md  text.md
wiki/observations/ingest-2026-05-16T22-00-45Z/: broll.md  pacing.md
wiki/observations/ingest-2026-05-16T22-46-30Z/: broll.md  cuts.md  motion.md  pacing.md  text.md
wiki/patterns/: README.md  sliding-stack-pip.md
wiki/prompting/: README.md  animation-behavior.md  audio-and-music.md  b-roll-identification.md  caption-styles.md  chunking-strategies.md  cuts-and-transitions.md  motion-and-zoom.md  on-screen-text.md  pacing.md  sfx-detection.md  zoom-detection.md
